force-app/main/default/objects/TrackArtist__c/TrackArtist__c.object-meta.xml
<CustomObject>
    <label>TrackArtist</label>
    <nameField>
        <label>TrackArtist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TrackArtists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>