force-app/main/default/objects/TrackArtist__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <label>Artist</label>
    <referenceTo>Artist__c</referenceTo>
    <relationshipLabel>TrackArtists</relationshipLabel>
    <relationshipName>TrackArtists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>