force-app/main/default/objects/TrackArtist__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <label>Track</label>
    <referenceTo>Track__c</referenceTo>
    <relationshipLabel>TrackArtists</relationshipLabel>
    <relationshipName>TrackArtists</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>