force-app/main/default/objects/TrackArtist__c/fields/TrackArtistKey__c.field-meta.xml
<CustomField>
    <fullName>TrackArtistKey__c</fullName>
    <externalId>true</externalId>
    <label>TrackArtistKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>